# prestoclient

./: .gitignore  README.md  VERSION
C/: CMakeLists.txt  Makefile  README.md  doxy.sh
C/doxygen/: prestoclient.doxyfile
C/msvc/: prestoclient.sln  prestoclient.vcxproj  prestoclient.vcxproj.filters
C/prestoclient/: prestoclient.c  prestoclient.h  prestoclientjsonstream.c  prestoclienttypes.h  prestoclientutils.c
C/src/: main.c
RPresto/: DESCRIPTION  INSTALL  NAMESPACE  README
RPresto/R/: RPresto.R
RPresto/man/: PrestoClient-class.Rd  RPresto-package.Rd
python/: prestoclient.py
python/doc/: api-objects.txt  class-tree.html  frames.html  help.html  identifier-index.html  module-tree.html  prestoclient-module.html  prestoclient-pysrc.html  prestoclient.PrestoClient-class.html  redirect.html  toc-everything.html  toc-prestoclient-module.html  toc.html
